syntax = "proto3";

option go_package = "internal/process";

package processmanager;

service ProcessManager {
    rpc StartProcess (StartRequest) returns (ProcessResponse);

    rpc StopProcess (StopRequest) returns (ProcessResponse);

    rpc ListProcess (ListRequest) returns (ListResponse);
}

message StartRequest {
    string name = 1;
    string command = 2;
    repeated string args = 3;
}

message StopRequest {
    string name = 1;
}

message ListRequest {}

message ProcessResponse {
    bool success = 1;
    string message = 2;
}

message ProcessInfo {
    string name = 1;
    int32 pid = 2;
    string status = 3;
}

message ListResponse {
    repeated ProcessInfo processes = 1;
}